# swig-python-autotools-example

./: .travis.yml  COPYING  Makefile.am  README  autogen.sh  configure.ac  demo.sh
src/: example.c  example.h  example.i
